tests/baselines/reference/declFileGenericType2.errors.txt
declFileGenericType2.ts(1,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
declFileGenericType2.ts(1,23): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
declFileGenericType2.ts(5,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
declFileGenericType2.ts(5,23): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
declFileGenericType2.ts(9,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
declFileGenericType2.ts(9,23): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
declFileGenericType2.ts(13,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
declFileGenericType2.ts(13,23): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
declFileGenericType2.ts(13,27): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== declFileGenericType2.ts (9 errors) ====
    declare module templa.mvc {
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
                          ~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        interface IModel {
        }
    }
    declare module templa.mvc {
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
                          ~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        interface IController<ModelType extends templa.mvc.IModel> {
        }
    }
    declare module templa.mvc {
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
                          ~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        class AbstractController<ModelType extends templa.mvc.IModel> implements mvc.IController<ModelType> {
        }
    }
    declare module templa.mvc.composite {
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
                          ~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
                              ~~~~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        interface ICompositeControllerModel extends mvc.IModel {
            getControllers(): mvc.IController<mvc.IModel>[];
        }
    }
    namespace templa.dom.mvc {
        export interface IElementController<ModelType extends templa.mvc.IModel> extends templa.mvc.IController<ModelType> {
        }
    }
    // Module
    namespace templa.dom.mvc {
    
        export class AbstractElementController<ModelType extends templa.mvc.IModel> extends templa.mvc.AbstractController<ModelType> implements IElementController<ModelType> {
            constructor() {
                super();
            }
        }
    }
    // Module
    namespace templa.dom.mvc.composite {
        export class AbstractCompositeElementController<ModelType extends templa.mvc.composite.ICompositeControllerModel> extends templa.dom.mvc.AbstractElementController<ModelType> {
            public _controllers: templa.mvc.IController<templa.mvc.IModel>[];
            constructor() {
                super();
                this._controllers = [];
            }
        }
    }
    